# langgraph-production-agent

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
data/policies/: faq.md  returns.md  shipping.md  warranty.md
scripts/: ingest.py  visualize.py
src/agent/: __init__.py  graph.py  prompts.py  routing.py  settings.py  state.py
src/agent/memory/: __init__.py  long_term.py  short_term.py
src/agent/nodes/: __init__.py  execute.py  remember.py  respond.py  review.py
src/agent/rag/: __init__.py  loader.py  store.py
src/agent/tools/: __init__.py  accounts.py  orders.py  policies.py  refunds.py
tests/: conftest.py  test_graph.py  test_interrupts.py  test_routing.py  test_state.py  test_tools.py
