[project]
name = "langgraph-production-agent"
version = "0.1.0"
description = "Production-ready Customer Service Agent built with LangGraph and Gemini"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.3",
    "langchain-google-genai>=2.1",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-postgres>=0.0.12",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pgvector>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "langgraph-cli[inmem]>=0.1",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
